2005-09-02  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/resource_adapter.py: New file.
	* qm/test/resource.py (resource_adapter): Remove.

2005-09-01  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/resource.py (resource_adapter): New function.

2005-08-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (FileResultReader): Import it.
	(get_extension_classes): New function.
	(load_results): Let FileResultReaders decided if they understand
	the file format, rather than hard-coding the decision here.
	* qm/test/cmdline.py (QMTest.GetDatabaseIfAvailable): New method.
	Use it throughout, where appropriate.
	(QMTest.__ExecuteSummarize): Permit execution without a database.
	(QMTest.__GetResultStreams): Likewise.
	* qm/test/file_result_reader.py (FileResultReader.InvalidFile):
	New class.
	* qm/test/result_stream.py (ResultStream.arguments): Remove unused
	"database" argument.
	* qm/test/classes/classes.qmc: Add dejagnu_stream.DejaGNUReader.
	* qm/test/classes/dejagnu_test.py (DejaGNUTest.ERROR): Fix typo.
	(DejaGNUTest.__outcome_map): Rename to ...
	(DejaGNUTest.outcome_map): ... this.  Fill in all entries.
	(DejaGNUTest._RecordDejaGNUOutcome): Adjust.
	* qm/test/classes/pickle_result_stream.py
	(PickleResultReader.__init__): Raise InvalidFile if appropriate.
	* qm/test/classes/xml_result_stream.py (XMLResultReader.__init__):
	Likewise.
	* qm/test/classes/dejagnu_stream.py (DejaGNUReader): New class.

2005-08-19  Stefan Seefeld  <stefan@codesourcery.com>

	* MANIFEST.in: Add missing files.

2005-07-22  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (QMTest.list_long_option_spec): New variable.
	(QMTest.list_recursive_option_spec): Likewise.
	(QMTest.commands_spec): Add "ls".
	(QMTest.Execute): Support "ls".
	(QMTest.__ExecuteList): New method.
	* qm/test/datbase.py (Database.GetExtensions): New method.
	* qm/test/doc/reference.xml: Describe "qmtest ls".

2005-07-21  Stefan Seefeld  <stefan@codesourcery.com>
