@@ -1,3 +1,8 @@
+2005-09-06  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/test/classes/dejagnu_test.py: Fix typo.
+	* qm/test/classes/dg_test.py: Add new 'keep_output' field.
+
 2005-09-02  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/test/resource_adapter.py: New file.
